fix: z-index modal

--- a/src/components/ui-components/Modal.css
+++ b/src/components/ui-components/Modal.css
@@ -35,6 +35,8 @@
     visibility: visible;
     opacity: 1;
     scale: 1;
+    position: relative;
+    z-index: 9999;
 }
 .closeModal {
     visibility: hidden;
